// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TableWithFilter should render loading and pagination 1`] = `
<Fragment>
  <PrimaryToolbar
    pagination={
      <Skeleton
        size="lg"
      />
    }
  />
  <SkeletonTable
    numberOfColumns={1}
    rows={10}
    variant="compact"
  />
</Fragment>
`;

exports[`TableWithFilter should render with data 1`] = `
<Fragment>
  <Table
    actionsMenuAppendTo="inline"
    aria-label="undefined tags"
    borders={true}
    canCollapseAll={false}
    canSelectAll={true}
    canSortFavorites={true}
    cells={
      [
        {
          "title": "something",
        },
      ]
    }
    className="ins-c-tag-modal__table"
    collapseAllAriaLabel=""
    contentId="expanded-content"
    dropdownDirection="down"
    dropdownPosition="right"
    expandId="expandable-toggle"
    gridBreakPoint="grid-md"
    isHeaderSelectDisabled={false}
    isNested={false}
    isStickyHeader={false}
    isTreeTable={false}
    ouiaSafe={true}
    role="grid"
    rowLabeledBy="simple-node"
    rows={
      [
        [
          "one",
        ],
      ]
    }
    selectVariant="checkbox"
    variant="compact"
  >
    <TableHeader />
    <TableBody />
  </Table>
</Fragment>
`;

exports[`TableWithFilter should render with data and bulk select with calculate checked 1`] = `
<Fragment>
  <PrimaryToolbar
    bulkSelect={
      {
        "checked": undefined,
        "count": 0,
        "items": [
          {
            "onClick": [Function],
            "title": "Select none (0)",
          },
          {
            "onClick": [Function],
            "title": "Select page (1)",
          },
        ],
        "onSelect": [Function],
      }
    }
    pagination={
      {
        "itemCount": undefined,
        "onPerPageSelect": [Function],
        "onSetPage": [Function],
        "page": 1,
      }
    }
  />
  <Table
    actionsMenuAppendTo="inline"
    aria-label="undefined tags"
    borders={true}
    canCollapseAll={false}
    canSelectAll={true}
    canSortFavorites={true}
    cells={
      [
        {
          "title": "something",
        },
      ]
    }
    className="ins-c-tag-modal__table"
    collapseAllAriaLabel=""
    contentId="expanded-content"
    dropdownDirection="down"
    dropdownPosition="right"
    expandId="expandable-toggle"
    gridBreakPoint="grid-md"
    isHeaderSelectDisabled={false}
    isNested={false}
    isStickyHeader={false}
    isTreeTable={false}
    onSelect={[Function]}
    ouiaSafe={true}
    role="grid"
    rowLabeledBy="simple-node"
    rows={
      [
        [
          "one",
        ],
      ]
    }
    selectVariant="checkbox"
    variant="compact"
  >
    <TableHeader />
    <TableBody />
  </Table>
  <TableToolbar
    className="ins-c-inventory__table--toolbar"
    isFooter={true}
  >
    <Pagination
      onPerPageSelect={[Function]}
      onSetPage={[Function]}
      page={1}
      variant="bottom"
    />
  </TableToolbar>
</Fragment>
`;

exports[`TableWithFilter should render with data and bulk select without calculate checked 1`] = `
<Fragment>
  <PrimaryToolbar
    bulkSelect={
      {
        "checked": undefined,
        "count": 0,
        "items": [
          {
            "onClick": [Function],
            "title": "Select none (0)",
          },
          {
            "onClick": [Function],
            "title": "Select page (1)",
          },
        ],
        "onSelect": [Function],
      }
    }
    pagination={
      {
        "itemCount": undefined,
        "onPerPageSelect": [Function],
        "onSetPage": [Function],
        "page": 1,
      }
    }
  />
  <Table
    actionsMenuAppendTo="inline"
    aria-label="undefined tags"
    borders={true}
    canCollapseAll={false}
    canSelectAll={true}
    canSortFavorites={true}
    cells={
      [
        {
          "title": "something",
        },
      ]
    }
    className="ins-c-tag-modal__table"
    collapseAllAriaLabel=""
    contentId="expanded-content"
    dropdownDirection="down"
    dropdownPosition="right"
    expandId="expandable-toggle"
    gridBreakPoint="grid-md"
    isHeaderSelectDisabled={false}
    isNested={false}
    isStickyHeader={false}
    isTreeTable={false}
    onSelect={[Function]}
    ouiaSafe={true}
    role="grid"
    rowLabeledBy="simple-node"
    rows={
      [
        [
          "one",
        ],
      ]
    }
    selectVariant="checkbox"
    variant="compact"
  >
    <TableHeader />
    <TableBody />
  </Table>
  <TableToolbar
    className="ins-c-inventory__table--toolbar"
    isFooter={true}
  >
    <Pagination
      onPerPageSelect={[Function]}
      onSetPage={[Function]}
      page={1}
      variant="bottom"
    />
  </TableToolbar>
</Fragment>
`;

exports[`TableWithFilter should render with data and filters 1`] = `
<Fragment>
  <PrimaryToolbar
    filterConfig={
      {
        "items": [
          {
            "something": "1",
          },
        ],
      }
    }
    pagination={
      {
        "itemCount": undefined,
        "onPerPageSelect": [Function],
        "onSetPage": [Function],
      }
    }
  />
  <Table
    actionsMenuAppendTo="inline"
    aria-label="undefined tags"
    borders={true}
    canCollapseAll={false}
    canSelectAll={true}
    canSortFavorites={true}
    cells={
      [
        {
          "title": "something",
        },
      ]
    }
    className="ins-c-tag-modal__table"
    collapseAllAriaLabel=""
    contentId="expanded-content"
    dropdownDirection="down"
    dropdownPosition="right"
    expandId="expandable-toggle"
    gridBreakPoint="grid-md"
    isHeaderSelectDisabled={false}
    isNested={false}
    isStickyHeader={false}
    isTreeTable={false}
    ouiaSafe={true}
    role="grid"
    rowLabeledBy="simple-node"
    rows={
      [
        [
          "one",
        ],
      ]
    }
    selectVariant="checkbox"
    variant="compact"
  >
    <TableHeader />
    <TableBody />
  </Table>
</Fragment>
`;

exports[`TableWithFilter should render with data and pagination 1`] = `
<Fragment>
  <PrimaryToolbar
    pagination={
      {
        "itemCount": undefined,
        "onPerPageSelect": [Function],
        "onSetPage": [Function],
        "page": 1,
      }
    }
  />
  <Table
    actionsMenuAppendTo="inline"
    aria-label="undefined tags"
    borders={true}
    canCollapseAll={false}
    canSelectAll={true}
    canSortFavorites={true}
    cells={
      [
        {
          "title": "something",
        },
      ]
    }
    className="ins-c-tag-modal__table"
    collapseAllAriaLabel=""
    contentId="expanded-content"
    dropdownDirection="down"
    dropdownPosition="right"
    expandId="expandable-toggle"
    gridBreakPoint="grid-md"
    isHeaderSelectDisabled={false}
    isNested={false}
    isStickyHeader={false}
    isTreeTable={false}
    ouiaSafe={true}
    role="grid"
    rowLabeledBy="simple-node"
    rows={
      [
        [
          "one",
        ],
      ]
    }
    selectVariant="checkbox"
    variant="compact"
  >
    <TableHeader />
    <TableBody />
  </Table>
  <TableToolbar
    className="ins-c-inventory__table--toolbar"
    isFooter={true}
  >
    <Pagination
      onPerPageSelect={[Function]}
      onSetPage={[Function]}
      page={1}
      variant="bottom"
    />
  </TableToolbar>
</Fragment>
`;

exports[`TableWithFilter should render without data 1`] = `
<Fragment>
  <SkeletonTable
    numberOfColumns={0}
    rows={10}
    variant="compact"
  />
</Fragment>
`;
